# TechnicalSketcher

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  OnlineUpdater.pyperf  README.md  TechnicalSketcher-Allegro.sln  TechnicalSketcher.sln  build-app.sh  clean-win.bat  generate-win.bat  index.md  output.json  premake5.lua  run  update-battery-engine.bat  updater.spec  version  version.txt
AppInstaller-x64/: AppInstaller-x64.vdproj
AppInstaller-x64/Debug/: AppInstaller-x64.msi
AppInstaller-x64/Release/: TechnicalSketcher-Setup-x64.msi
ApplicationUpdater/: ApplicationUpdater.pyproj  uninstall.py  updater.py  updater.spec
CombineInstallers/: Combine_Script.sed  combineInstallers.bat
CompilePython/: ApplicationUpdater.spec  CompilePython.vcxproj  Updater.spec  uninstall.spec
CompilePython/x64/Debug/: CompilePython.exe.recipe
CompilePython/x64/Release/: CompilePython.exe.recipe
Debug/: TechnicalSketcher-Allegro.ilk
DeployInstallers/: ApplicationUpdater.spec  CompilePython.py  CompilePython.vcxproj  CompilePython.vcxproj.filters  CopyDeployed.bat  Deploy.bat  Deploy.py  Deploy.vcxproj  Deploy.vcxproj.filters  DeployInstallers.vcxproj  uninstall.spec  updater.spec
DeployInstallers/x64-Deploy/Debug/: Deploy.exe.recipe
DeployInstallers/x64-Deploy/Release/: Deploy.exe.recipe
DeployInstallers/x64/Debug/: DeployInstallers.exe.recipe
DeployInstallers/x64/Release/: DeployInstallers.exe.recipe
Installer-x64/: Installer-x64.vdproj
PythonModules/: uninstall.py  updater.py
ReleaseArchiver/: createReleaseArchive.bat
TechnicalSketcher/: TechnicalSketcher.aps  TechnicalSketcher.rc  TechnicalSketcher.vcxproj  TechnicalSketcher.vcxproj.filters  imgui.ini  resource.h
TechnicalSketcher-Allegro/: AllegroEngine.cpp  AllegroEngine.h  Application.cpp  Application.h  Application_Events.cpp  Application_files.cpp  Application_graphic.cpp  Application_logic.cpp  Engine.h  GuiWindows.h  Layer.h  LayerArray.cpp  LayerArray.h  LayerList.cpp  LayerList.h  MainEngine.cpp  MainEngine.h  MainEngine_Events.cpp  MainEngine_GUI.cpp  MainEngine_fonts.cpp  MainEngine_graphic.cpp  MainEngine_logic.cpp  Shape.cpp  Shape.h  ShapeSelector.cpp  ShapeSelector.h  SketchFile.cpp  SketchFile.h  StaticImGuiWindow.h  TechnicalSketcher-Allegro.cpp  TechnicalSketcher-Allegro.vcxproj  TechnicalSketcher-Allegro.vcxproj.filters  config.h  fonts.cpp  geometry.h  imgui.ini  main.cpp  math_geometry.cpp  math_geometry.h  misc.h  (+4 more)
TechnicalSketcher-Allegro/Debug/: TechnicalSketcher-Allegro.exe.recipe  vc142.idb
TechnicalSketcher-Allegro/Debug/Technica.9970a034.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TechnicalSketcher-Allegro.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TechnicalSketcher-Allegro/Release/: TechnicalSketcher-Allegro.exe.recipe
TechnicalSketcher-Allegro/Release/Technica.9970a034.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TechnicalSketcher-Allegro.lastbuildstate  TechnicalSketcher-Allegro.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TechnicalSketcher-Allegro/gl/: CubeMap.h  DepthMap.h  DirectionalLight.h  Model.h  PrimitiveRenderer.h  Renderable.h  ShaderProgram.h  SimpleColoredRenderer.h  Texture2D.h  defaultShaders.h
TechnicalSketcher-Allegro/include/: AllegroEngine.h  Application.h  Layer.h  LayerList.h  Shape.h  SketchFile.h  config.h  fonts.h  print.h  utils.h
TechnicalSketcher-Allegro/src/: AllegroEngine.cpp  Application.cpp  Application_Events.cpp  Application_files.cpp  Application_graphic.cpp  Application_updates.cpp  LayerList.cpp  Shape.cpp  SketchFile.cpp  geometry.cpp  main.cpp  utils.cpp
TechnicalSketcher-Allegro/x64/Debug/: TechnicalSketcher-Allegro.exe.recipe  vc142.idb
TechnicalSketcher-Allegro/x64/Release/: TechnicalSketcher-Allegro.exe.recipe
Update-Installer/src/: UpdaterOptions.cpp
ZipRelease/: ZipRelease.vcxproj
cmake/: CPM.cmake
embed/: EmbedFiles.bat  SplashScreen.xcf
include/: Action.h  App.hpp  Application.h  ApplicationRenderer.h  BatteryApp.h  FileContent.h  Gui.h  GuiTheme.h  Layer.h  LayerHistory.h  LayerList.h  LayerState.h  Navigator.h  NavigatorLayer.h  PerlinNoise.h  SelectionHandler.h  Shape.h  SketchFile.h  SketchLayer.h  Tsk.hpp  TskConfig.hpp  TskDocument.hpp  TskHost.hpp  TskRenderHost.hpp  TskSettings.hpp  TskSplashWindow.hpp  TskWindow.hpp  Updater.h  UserInterface.h  config.h  pch.h  pch.hpp
include/Fonts/: FontLoader.h  Fonts.h  MaterialIconFontData.h  SegoeMDL2FontData.h
include/Shapes/: ArcShape.h  CircleShape.h  GenericShape.h  LineShape.h
include/Tools/: ArcTool.h  CircleTool.h  GenericTool.h  LineStripTool.h  LineTool.h  SelectionTool.h
installer/: TechnicalSketcher.wxs
resource/: TechnicalSketcher_base64.txt  fragment.glsl  resource.aps  resource.rc  vertex.glsl
resources/: resource.h
src/: App.cpp  Application.cpp  ApplicationRenderer.cpp  BatteryApp.cpp  Gui.cpp  Layer.cpp  LayerList.cpp  LayerState.cpp  Navigator.cpp  SelectionHandler.cpp  Shape.cpp  SketchFile.cpp  Tsk.cpp  TskConfig.cpp  TskDocument.cpp  TskHost.cpp  TskRenderHost.cpp  TskSettings.cpp  TskSplashWindow.cpp  TskWindow.cpp  Updater.cpp  UserInterface.cpp  app.h  app.hpp  base.h  clay_renderer.cpp  main.cpp  renderer.cpp  std.h  std.hpp  vec.h  vec.hpp
src/Fonts/: FontLoader.cpp
src/GL/: glad.c  glad.h
src/Shapes/: ArcShape.cpp  CircleShape.cpp  GenericShape.cpp  LineShape.cpp
src/Tools/: ArcTool.cpp  CircleTool.cpp  LineStripTool.cpp  LineTool.cpp  SelectionTool.cpp
src/app/: app.cpp  cJSON.c  cJSON.h  clay_renderer.cpp  colors.h  components.cpp  document.cpp  documentrenderer.cpp  earcut.hpp  freehand.cpp  profiling.cpp  renderer.cpp  shader.cpp  ui.cpp  uiCache.h
src/app/clay/: clay_renderer.c  (+1 more)
src/clay/: clay.cpp
src/core/: hotreload.cpp  main.cpp
src/shared/: TinyStd.hpp  TinyStd_impl.cpp  app.cpp  app.h  clay.h  format.cpp  format.h  gl.hpp  shared.cpp  shared.h  std.cpp  std.h  stddecl.h  vector.h
traffic/: clones.csv  views.csv
ui/: TskWindow.py
x64/Debug/: recent
x64/Release/: TechnicalSketcher-Allegro.ipdb
(+51 files in other folders)
